fix ui overlaping

--- a/src/scss/components/Buttons.scss
+++ b/src/scss/components/Buttons.scss
@@ -3,6 +3,7 @@
     color: #fff;
     font-family: var(--ff-primary);
     height: var(--button-size);
+    pointer-events: all;
     cursor: pointer;
 
     &.rounded {
@@ -10,6 +11,10 @@
         background: var(--clr-background);
         border-radius: var(--button-size);
         border: var(--app-border-size) solid var(--clr-secondary);
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     &.default {
