--- a/src/scss/components/Dialogue.scss
+++ b/src/scss/components/Dialogue.scss
@@ -6,6 +6,7 @@
         bottom: 5rem;
         padding: var(--app-padding);
         width: clamp(300px, calc(100vw - var(--app-padding)), 40vw);
+        pointer-events: all;
 
         display: flex;
         flex-flow: column nowrap;
