--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,9 +2,6 @@
     color-scheme: only light !important;
 }
 
-@import "./assets/icons.scss";
-@import "./assets/fonts.scss";
-
 @import "./globals/variables.scss";
 @import "./globals/mixins.scss";
 @import "./globals/main.scss";
@@ -58,6 +55,13 @@
     .btn:not(:first-child) {
         margin-left: 16px;
     }
+}
+
+.ui-container {
+    position: fixed;
+    z-index: 2;
+    inset: 0;
+    pointer-events: none;
 }
 
 
@@ -754,7 +758,6 @@
         justify-content: end;
 
         span {
-            font-family: $secondary-font;
             opacity: 0.6;
         }
     }
@@ -767,7 +770,6 @@
         border: none;
         border-radius: 1rem 2rem;
         background: $gradient2;
-        font-family: $secondary-font;
         text-align: center;
         color: #fff;
         font-size: 2rem;
@@ -1556,7 +1558,6 @@
 
     &__container {
         position: relative;
-        border-radius: $radius;
         padding: 1rem;
         border: 6px solid $accent;
         background: $gradient;
